# soonish

./: .clinerules  .env.example  .gitignore  .prompt.md  .windsurfrules  Dockerfile  GETTING_STARTED.md  README.md  SETUP.md  alembic.ini  demo_full_lifecycle.py  docker-compose.yml  ideas.drawio  justfile  prompt.md  pyproject.toml  requirements.txt  setup.py
alembic/: env.py
docs/: ARCHITECTURAL_CLARITY.md  DOCUMENTATION_REVIEW_2025-10-09.md  IMPLEMENTATION_STATUS.md  NOTIFICATION_REFACTOR_COMPLETE.md  ORGANIZATIONS_README.md  RATE_LIMITING_ENABLED.md  README.md  architecture.md  considerations.md  data_contracts.md  design.md  development.md  diagrams.md  domain_events.md  ideas.drawio  models.md  overview.md  process-flows.md  reimplementation-plan.md  schema.sql  security.md  spec-open-questions.md  system-specification.md  troubleshooting.md  user-interaction-workflows.md  vision.md
frontend-standalone-example/: .env.example  README.md  index.html  package-lock.json  package.json  vite.config.ts
frontend-theater-volunteer/: README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend-website/: README.md  index.html  package-lock.json  package.json  vite.config.ts
scripts/: check_services.py  dev_integrations.py  init_db.py  setup_apprise.py  setup_test_data.py  smtp2sms.py  test_email_verification_real.py  test_event_cancellation.py  test_event_creation.py  test_event_update_broadcast.py  test_notifications.py  test_phase_10.py  test_phase_11.py  test_phase_13.py  test_phase_14.py  test_phase_15_all_integrations.py  (+11 more)
(+173 files in other folders)
