[project]
name = "soonish"
version = "0.1.0"
description = "Notification-first event coordination service built on Temporal.io"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "temporalio>=1.0.0",
    "apprise>=1.0.0",
    "pydantic>=2.0.0",
    "fastapi>=0.100.0",
    "uvicorn>=0.20.0",
    "httpx>=0.24.0",
    "python-dotenv>=1.0.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "aiosqlite>=0.21.0",
    "cryptography>=46.0.2",
    "python-jose>=3.5.0",
    "passlib>=1.7.4",
    "pydantic-settings>=2.11.0",
    "email-validator>=2.3.0",
    "bcrypt<5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[dependency-groups]
dev = [
    "ipython>=9.6.0",
]
